--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ transformer_classifier/s1_s2_train/train_output.txt
 transformer_classifier/s1_s2_train/training_loss.png
 transformer_classifier/s1_s2_train/training_metrics.csv
 transformer_classifier/s1_s2_train/xnn_trained.pt
+transformer_classifier/s1_train/train_output.txt
+transformer_classifier/s1_train/training_loss.png
+transformer_classifier/s1_train/training_metrics.csv
+transformer_classifier/s1_train/xnn_trained.pt
